@@ -1,17 +1,97 @@
 ==test==
 --t--
-    <%= navbar header => ['The brand', ['#'], hamburger, toggler => 'bs-example-navbar-collapse-1'] %>
+    <%= navbar header => ['The brand', ['#'], hamburger, toggler => 'bs-example-navbar-collapse-1'], [] %>
 --t--
 --e--
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button class="collapse navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+                <button class="collapsed navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">The brand</a>
+            </div>
+        </div>
+    </nav>
+--e--
+
+==test==
+--t--
+    <%= navbar html_header => qq{
+            <div class="navbar-header">
+                <button class="collapsed navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+                    <span>Expand</span>
+                </button>
+                <a class="navbar-brand" href="#">The brand</a>
+            </div>
+    }, [] %>
+--t--
+--e--
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button class="collapsed navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+                    <span>Expand</span>
+                </button>
+                <a class="navbar-brand" href="#">The brand</a>
+            </div>
+        </div>
+    </nav>
+--e--
+By using <code>html_header</code> you can specify an entirely customized header.
+
+
+==test==
+--t--
+    <%= navbar header => ['The brand', ['#'], hamburger, toggler => 'bs-example-navbar-collapse-1'],
+               [
+                    {
+                        nav => [
+                            [
+                                ['Link', ['#'] ],
+                                ['Another link', ['#'], active ],
+                                {
+                                    button => ['Menu', ['#'], caret ],
+                                    items => [
+                                        ['Choice 1', ['#'] ],
+                                        ['Choice 2', ['#'] ],
+                                        [],
+                                        ['Choice 3', ['#'] ],
+                                    ]
+                                }
+                            ]
+                        ]
+                    }
+               ]
+    %>
+--t--
+--e--
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button class="collapsed navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">The brand</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Link</a></li>
+                    <li class="active"><a href="#">Another link</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Choice 1</a></li>
+                            <li><a href="#">Choice 2</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Choice 3</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -23,7 +103,7 @@
 <%= navbar header => ['The brand', hamburger],
            [
                 {
-                    nav => {
+                    nav => [
                         [
                             ['Link', ['#'], active ],
                             ['Link', ['#'] ],
@@ -38,12 +118,13 @@
                                     [],
                                     ['One more separated link', ['#'] ],
                                 ],
-                            ],
+                            },
                         },
-                    },
+                    ],
                 },
                 {
-                    form => {
+                    form => [
+                        ['/login', method => 'post'],
                         left,
                         [
                             formgroup => [
@@ -52,10 +133,10 @@
                             ],
                             submit_button => ['Submit'],
                         ]
-                    },
+                    ],
                 },
                 {
-                    nav => {
+                    nav => [
                         right,
                         [
                             ['Link', ['#'] ],
@@ -70,7 +151,7 @@
                                 ],
                             }
                         ],
-                    }
+                    ]
                 }
            ]
 
