@@ -12,5 +12,10 @@
         <div class="container">
             [EXAMPLES]
         </div>
+        <pre style="background-color: #fff; border-width: 0px;">
+
+
+
+        </pre>
     </body>
 </html>
